Fix unintended layout issue on Contact page and namespace content element on each page.

--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -1,17 +1,14 @@
 %container {
-  --max-width: 100%;
-  --gutter-size: 0 1em;
+  --max-width: 80vw;
 }
 
 @media screen and (min-width: 600px) {
   %container {
-    --max-width: 1100px;
-    --gutter-size: 0 2em;
+    --max-width: 70vw;
   }
 }
 
 %container {
   margin: 0 auto;
   max-width: var(--max-width);
-  padding: var(--gutter-size);
 }
