--- a/src/styles/components/_content.scss
+++ b/src/styles/components/_content.scss
@@ -10,6 +10,4 @@
 
 .content {
   display: var(--content-display);
-
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 }
